Added symlink to nvim configuration

--- a/scoop/config.json
+++ b/scoop/config.json
@@ -1,3 +1,5 @@
 {
-    "last_update":  "2024-12-10T13:07:53.1416525+05:30"
+  "last_update": "2024-12-11T08:47:22.2977667+05:30",
+  "scoop_repo": "https://github.com/ScoopInstaller/Scoop",
+  "scoop_branch": "master"
 }
